Working on #158 to fix responsive iphone off center bug

--- a/app/styles/_front.scss
+++ b/app/styles/_front.scss
@@ -32,6 +32,7 @@
   position: absolute;
   top: 0;
   width: 100%;
+  width: auto;
   z-index: -100;
 }
 
